--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
 
 body{
     background-color: #000;
@@ -18,12 +14,14 @@ h1{
     bottom: 0;
     padding: 12px;
     width: 300px;
+    
+
 }
 
 .sidebar__navigation{
     background-color: #121212;
     border-radius: 8px;
-    padding: 16px 0px 0px 16px;
+    
 }
 
 .sidebar__navigation .logo{
@@ -34,7 +32,7 @@ h1{
 }
 
 .logo img{
-    width: 80px;
+    width: 100px;
     
 }
 
@@ -43,9 +41,67 @@ h1{
     padding: 0px 20px 10px 20px;
 }
 
-.sidebar nav ul li{
+.sidebar ul li{
+    padding: 10px 0;
+}
+
+.sidebar nav ul li a{
     color: #b3b3b3;
     text-decoration: none;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 18px;
+    font-family: 'DM Sans', sans-serif;
 }
+
+
+
+.library .library__menu{
+    margin: 15px 0 15px 0;
+    
+    background-color: #121212;
+    border-radius: 8px;
+    padding: 20px 0 20px 0;
+}
+
+.you__library a{
+    color: #b3b3b3;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 22px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 16px 0 0 16px;
+}
+
+.you__library a #texto{
+    padding-left: 10px;
+}
+
+.playlist{
+    background-color: rgb(37, 37, 37);
+    margin: 20px;
+    border-radius: 8px;
+    padding: 10px 0 10px 16px;
+}
+
+.playlist p,h1{
+    color: white;
+    padding: 8px;
+    font-family: 'DM Sans', sans-serif;
+    
+}
+
+.playlist h1{
+    font-weight: 700;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.playlist button{
+    margin-top: 25px;
+    padding: 10px;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: bolder;
+    border-radius: 50px;
+    width: 120px;
+}
+
+
